Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    price_one = restaurant['price']\n",
+    "    price_one = len(restaurant['price'])\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return restaurant\n",
     "    else:\n",
