--- a/index.ipynb
+++ b/index.ipynb
@@ -194,6 +194,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    price_one = len(restaurant['price'])\n",
+    "    price_two = len(alt)\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return restaurant\n",
     "    else:\n",
