Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,8 +194,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    price_one = len(restaurant['price'])\n",
-    "    price_two = len(alt)\n",
-    "    if restaurant['rating'] > alternative['rating']:\n",
+    "    price_two = len(alternative['price'])\n",
+    "    if price > alternative['rating']:\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
