--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    price_one = len(restaurant['price'])\n",
     "    price_two = len(alternative['price'])\n",
-    "    if price > alternative['rating']:\n",
+    "    if price_one < price:\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
