--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if restaurn"
+    "    for restaurant in rest"
    ]
   },
   {
