--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if "
+    "        if restaurant['is_closed']"
    ]
   },
   {
