--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == False"
+    "        if restaurant['is_closed'] == False:\n",
+    "            return"
    ]
   },
   {
