Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,9 +290,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    new\n",
+    "    new_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
+    "            \n",
     "            return"
    ]
   },
