Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "    new_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            \n",
+    "            append\n",
     "            return new_list"
    ]
   },
